<resources>
    <string name="app_name">DailyArtApp</string>
    <string name="title_home">DailyArt</string>
    <string name="title_research">Recherche</string>
    <string name="title_favorites">Favoris</string>
    <string name="research">Recherche...</string>
    <string name="museums">Musées</string>
    <string name="movements">Mouvements</string>
    <string name="museumsDialogTitle">Sélectionner les musées : </string>
    <string name="backToResearch">Retourner à la recherche</string>
    <string name="museum">Musée : </string>
    <string name="timePeriod">Epoque : </string>
    <string name="artist">Artiste : </string>
    <string name="description">Description : </string>
    <string name="add_to_favorites">Ajouter aux favoris</string>
</resources>